--- a/reper/build.gradle
+++ b/reper/build.gradle
@@ -49,6 +49,12 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.bitbucket.b_c:jose4j:0.9.3'
 
+	// Kakao
+	//Webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	//thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
 }
 
 tasks.named('test') {
