--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -19,3 +19,7 @@ logging.level:
   org.hibernate.orm.jdbc.bind: trace # (개발 환경) SQL 바인딩 값 출력
 
 springdoc.override-with-generic-response: false
+
+kakao:
+  client_id: 11a435ceceba6f2724e9f7b1b9b69f5b
+  redirect_uri: http://localhost:8080/callback
