[feat] back - 카카오 로그인시 token 기반으로 사용자 정보 담아오기 완료

--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -22,4 +22,4 @@ springdoc.override-with-generic-response: false
 
 kakao:
   client_id: 11a435ceceba6f2724e9f7b1b9b69f5b
-  redirect_uri: http://localhost:8080/callback
+  redirect_uri: http://localhost:8080/api/auth/callback
