--- a/reper/build.gradle
+++ b/reper/build.gradle
@@ -37,11 +37,13 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.10'  // 추가
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
 	// Spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
+	implementation 'com.auth0:java-jwt:3.19.2'
 
 	//JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -54,6 +56,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	//thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
 
 }
 
