--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
+  server:
+    port: 48620
   config:
     import: optional:application-secrets.yml
   datasource:
-    url: jdbc:mysql://localhost:3306/reper?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://mysql:75913/reper?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -18,7 +20,7 @@ logging.level:
   org.hibernate.SQL: debug # (개발 환경) SQL 로그 출력
   org.hibernate.orm.jdbc.bind: trace # (개발 환경) SQL 바인딩 값 출력
 
-springdoc.override-with-gㅐㅕㅑeneric-response: false
+springdoc.override-with-generic-response: false
 
 kakao:
   client_id: 11a435ceceba6f2724e9f7b1b9b69f5b
