--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -14,11 +14,20 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+  elasticsearch:
+    uris: https://localhost:9200  # HTTPS 사용 (보안 적용됨)
+    username: elastic
+    password: ${ELASTIC_PASSWORD}
+    ssl:
+      enabled: true
+      certificate: classpath:certs/elasticsearch.crt
+      key: classpath:certs/elasticsearch.key
+
 logging.level:
   org.hibernate.SQL: debug # (개발 환경) SQL 로그 출력
   org.hibernate.orm.jdbc.bind: trace # (개발 환경) SQL 바인딩 값 출력
 
-springdoc.override-with-gㅐㅕㅑeneric-response: false
+springdoc.override-with-generic-response: false
 
 kakao:
   client_id: 11a435ceceba6f2724e9f7b1b9b69f5b
