--- a/reper/Dockerfile
+++ b/reper/Dockerfile
@@ -14,7 +14,8 @@ ENV USE_PROFILE prod
 # 이미지 빌드 명령
 ENTRYPOINT ["java", "-Dspring.profiles.active=${USE_PROFILE}", "-jar", "app.jar"]
 
-RUN curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-17.04.0-ce.tgz \
+RUN apt-get update && apt-get install -y curl \
+  && curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-17.04.0-ce.tgz \
   && tar xzvf docker-17.04.0-ce.tgz \
   && mv docker/docker /usr/local/bin \
   && rm -r docker docker-17.04.0-ce.tgz
