[feat] infra - docker-compose 파일 수정
dockerfile위치 지정

--- a/reper/docker-compose.yml
+++ b/reper/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     image: reper-server
     container_name: reper-server
     build:
-      context: .
+      context: ./reper
       dockerfile: Dockerfile
     restart: always
     environment:
