--- a/reper/docker-compose.yml
+++ b/reper/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql  # MySQL 데이터 저장
       - mysql_config:/etc/mysql/conf.d  # MySQL 설정 파일 저장
+      - ./my.cnf:/etc/mysql/my.cnf
     networks:
       - app-network
 
