--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config:
     import: optional:application-secrets.yml
   datasource:
-    url: jdbc:mysql://mysql:13790/reper?&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://mysql:13790/reper?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ssafy
     password: aoreoya5!^^
     driver-class-name: com.mysql.cj.jdbc.Driver
