--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:mysql://mysql:13790/reper?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: ssafy
-    password: aoreoya5!^^
+    password: jeongeoneya0831!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
