[feat] infra - docker-compose.yml 파일 수정

--- a/reper/docker-compose.yml
+++ b/reper/docker-compose.yml
@@ -13,8 +13,6 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql  # MySQL 데이터 저장
       - mysql_config:/etc/mysql/conf.d  # MySQL 설정 파일 저장
-      - ./my.cnf:/etc/mysql/my.cnf
-    command: --default-authentication-plugin=mysql_native_password
     networks:
       - app-network
 
@@ -26,7 +24,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/reper?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_URL: jdbc:mysql://i12d109.p.ssafy.io:13790/reper?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: ssafy
       SPRING_DATASOURCE_PASSWORD: jeongeoneya0831!
     ports:
