[feat] infra - application.yml 파일 수정

--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create # (개발환경) -> (운영 환경) validation/none
+      ddl-auto: update # (개발환경) -> (운영 환경) validation/none
     datasource:
       initialization-mode: always
     properties:
