--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -19,17 +19,12 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
   elasticsearch:
-    uris: http://localhost:9200  # (보안 적용될땐 https로 바꾸기)
+    uris: http://i12d109.p.ssafy.io:23159  # (보안 적용될땐 https로 바꾸기)
     socket-timeout: 60s
     username: ""  # 보안 비활성화에선 빈 값
     password: ""
-#    username: elastic
-#    password: ${ELASTIC_PASSWORD}
     ssl:
       enabled: false
-#      ca-certificate: classpath:docker/certs/ca.crt
-#      key: classpath:certs/elasticsearch.key
-#      certificate: classpath:certs/elasticsearch.crt
 
 logging.level:
   org.hibernate.SQL: debug # (개발 환경) SQL 로그 출력
@@ -39,4 +34,4 @@ springdoc.override-with-generic-response: false
 
 kakao:
   client_id: 11a435ceceba6f2724e9f7b1b9b69f5b
-  redirect_uri: http://localhost:8080/api/auth/callback
+  redirect_uri: http://i12d109.p.ssafy.io:13790/api/auth/callback
