[feat] infra - docker-compose.yml 파일 수정
쓰기권한 부여

--- a/reper/docker-compose.yml
+++ b/reper/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "23159:9200"
     volumes:
       - elastic_data:/usr/share/elasticsearch/data
-      - ./logs:/usr/share/elasticsearch/logs
+      - ./logs:/usr/share/elasticsearch/logs:rw
     networks:
       - elastic_network
 
