--- a/reper/docker/docker-compose.yml
+++ b/reper/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.17.1  # 최신 버전 적용
@@ -16,11 +15,11 @@ services:
 #      - .env
     ports:
       - "9200:9200"
-#      - "9300:9300"  # 노드 간 통신 (보통 필요 없음)
+
     volumes:
       - elastic_data:/usr/share/elasticsearch/data
 #      - ./certs:/usr/share/elasticsearch/config/certs
-      - ./logs:/usr/share/elasticsearch/logs
+#      - ./logs:/usr/share/elasticsearch/logs
     networks:
       - elastic_network
 
