[feat] back - 엘라스틱 서치 서버 킬때 인덱스 자동 생성 방지 설정

--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
 #    password: ${ELASTIC_PASSWORD}
     ssl:
       enabled: false
+    index:
+      auto-create-index: false
 #      ca-certificate: classpath:docker/certs/ca.crt
 #      key: classpath:certs/elasticsearch.key
 #      certificate: classpath:certs/elasticsearch.crt
