--- a/reper/src/main/resources/application.yml
+++ b/reper/src/main/resources/application.yml
@@ -19,12 +19,14 @@ spring:
     socket-timeout: 60s
     username: ""  # 보안 비활성화에선 빈 값
     password: ""
-#    username: elastic
-#    password: ${ELASTIC_PASSWORD}
     ssl:
       enabled: false
-    index:
-      auto-create-index: false
+    repositories:
+      enabled: true
+#    username: elastic
+#    password: ${ELASTIC_PASSWORD}
+#    index:
+#      auto-create-index: false
 #      ca-certificate: classpath:docker/certs/ca.crt
 #      key: classpath:certs/elasticsearch.key
 #      certificate: classpath:certs/elasticsearch.crt
