--- a/reper/src/main/resources/recipes-index-settings.json
+++ b/reper/src/main/resources/recipes-index-settings.json
@@ -1,65 +1,35 @@
 {
-  "settings": {
-    "analysis": {
-      "tokenizer": {
-        "edge_ngram_tokenizer": {
-          "type": "edge_ngram",
-          "min_gram": 1,
-          "max_gram": 20,
-          "token_chars": ["letter", "digit"]
-        },
-        "nori_tokenizer": {
-          "type": "nori_tokenizer",
-          "decompound_mode": "mixed"
-        }
-      },
-      "analyzer": {
-        "nori_analyzer": {
-          "type": "custom",
-          "tokenizer": "nori_tokenizer",
-          "filter": ["lowercase"]
-        },
-        "nori_edge_ngram_analyzer": {
-          "type": "custom",
-          "tokenizer": "edge_ngram_tokenizer",
-          "filter": ["lowercase"]
-        }
+  "analysis": {
+    "tokenizer": {
+      "nori_tokenizer": {
+        "type": "nori_tokenizer",
+        "decompound_mode": "mixed"
       }
-    }
-  },
-  "mappings": {
-    "properties": {
-      "recipeId": {
-        "type": "long"
+    },
+    "filter": {
+      "edge_ngram_filter": {
+        "type": "edge_ngram",
+        "min_gram": 1,
+        "max_gram": 20
+      }
+    },
+    "analyzer": {
+      "nori_analyzer": {
+        "type": "custom",
+        "tokenizer": "nori_tokenizer",
+        "filter": [
+          "lowercase"
+        ]
       },
-      "storeId": {
-        "type": "long"
-      },
-      "recipeName": {
-        "type": "text",
-        "analyzer": "nori_analyzer",
-        "fields": {
-          "edge_ngram": {
-            "type": "text",
-            "analyzer": "nori_edge_ngram_analyzer"
-          },
-          "keyword": {
-            "type": "keyword"
-          }
-        }
-      },
-      "type": {
-        "type": "keyword"
-      },
-      "category": {
-        "type": "keyword"
-      },
-      "recipeImg": {
-        "type": "keyword"
-      },
-      "ingredients": {
-        "type": "text"
+      "nori_edge_ngram_analyzer": {
+        "type": "custom",
+        "tokenizer": "nori_tokenizer",
+        "filter": [
+          "lowercase",
+          "edge_ngram_filter"
+        ]
       }
     }
   }
 }
+
