[fix] 시크릿 파일로 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - mysql
     volumes:
       - app_logs:/app/logs
-  - ./reper/src/main/resources/firebase/reper-7e5b4-firebase-adminsdk-fbsvc-ee6581830a.json:/app/config/firebase.json
+      - /run/secrets/firebase_json:/app/config/firebase.json  # Firebase JSON을 시크릿으로 마운트
     networks:
       - app-network
   
