--- a/reper/build.gradle
+++ b/reper/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-	implementation 'co.elastic.clients:elasticsearch-java:8.17.1'
 	implementation 'org.springframework.data:spring-data-elasticsearch:5.4.1'
+	implementation 'co.elastic.clients:elasticsearch-java:8.17.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -39,7 +39,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
-	implementation 'io.swagger.core.v3:swagger-annotations:2.2.10'  // 추가
+	//implementation 'io.swagger.core.v3:swagger-annotations:2.2.10'  // 추가
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
 	// Spring security
@@ -60,6 +60,12 @@ dependencies {
 	//thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+	// okhttp
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.2.2'
+
+	// firebase sdk
+	implementation 'com.google.firebase:firebase-admin:9.1.0'
 
 }
 
