--- a/reper/src/main/resources/recipes-index-settings.json
+++ b/reper/src/main/resources/recipes-index-settings.json
@@ -13,22 +13,61 @@
       "nori_tokenizer": {
         "type": "nori_tokenizer",
         "decompound_mode": "mixed"
+      },
+      "jaso_search_tokenizer": {
+        "type": "jaso_tokenizer",
+        "mistype": true,
+        "chosung": false
+      },
+      "jaso_index_tokenizer": {
+        "type": "jaso_tokenizer",
+        "mistype": true,
+        "chosung": true
       }
     },
-    "analyzer": {
-      "nori_analyzer": {
-        "type": "custom",
-        "tokenizer": "nori_tokenizer",
-        "filter": [
-          "lowercase"
-        ]
+    "filter": {
+        "suggest_filter": {
+          "type": "edge_ngram",
+          "min_gram": 1,
+          "max_gram": 50
+        }
       },
-      "nori_edge_ngram_analyzer": {
-        "type": "custom",
-        "tokenizer": "edge_ngram_tokenizer",
-        "filter": [
-          "lowercase"
-        ]
+      "analyzer": {
+        "nori_analyzer": {
+          "type": "custom",
+          "tokenizer": "nori_tokenizer",
+          "filter": [
+            "lowercase"
+          ]
+        },
+        "nori_edge_ngram_analyzer": {
+          "type": "custom",
+          "tokenizer": "edge_ngram_tokenizer",
+          "filter": [
+            "lowercase"
+          ]
+        },
+        "chosung_analyzer": {
+          "type": "custom",
+          "tokenizer": "jaso_index_tokenizer",
+          "filter": [
+            "suggest_filter"
+          ]
+        },
+        "engtohan_analyzer": {
+          "type": "custom",
+          "tokenizer": "standard",
+          "filter": [
+            "lowercase"
+          ]
+        },
+        "hantoeng_analyzer": {
+          "type": "custom",
+          "tokenizer": "standard",
+          "filter": [
+            "lowercase"
+          ]
+        }
       }
     }
   }
