--- a/reper/Dockerfile
+++ b/reper/Dockerfile
@@ -9,7 +9,7 @@ ARG JAR_FILE_PATH=build/libs/*.jar
 COPY ${JAR_FILE_PATH} app.jar
 
 # Firebase Admin SDK JSON 파일을 컨테이너 내 경로에 복사
-COPY ./src/main/resources/firebase/reper-7e5b4-firebase-adminsdk-fbsvc-ee6581830a.json /app/resources/firebase/
+COPY ./src/main/resources/firebase/reper-7e5b4-firebase-adminsdk-fbsvc-ee6581830a.json /app/config/firebase.json
 
 # .yaml local/prod 프로필 분리 구조일때 실행할 프로필 지정 prod(=운영)
 ENV USE_PROFILE prod
