--- a/reper_front/app/src/main/AndroidManifest.xml
+++ b/reper_front/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
 
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
