[feat] infra - json을 환경변수로 받아옴

--- a/reper/Dockerfile
+++ b/reper/Dockerfile
@@ -8,14 +8,13 @@ RUN apt-get update && apt-get install -y mariadb-client && rm -rf /var/lib/apt/l
 ARG JAR_FILE_PATH=build/libs/*.jar
 COPY ${JAR_FILE_PATH} app.jar
 
-# Firebase Admin SDK JSON 파일을 컨테이너 내 경로에 복사
-COPY ./src/main/resources/firebase/reper-7e5b4-firebase-adminsdk-fbsvc-ee6581830a.json /app/config/firebase.json
-
 # .yaml local/prod 프로필 분리 구조일때 실행할 프로필 지정 prod(=운영)
 ENV USE_PROFILE prod
 
-# Firebase JSON 파일 경로를 환경 변수로 설정
-ENV FIREBASE_JSON=/app/resources/firebase/reper-7e5b4-firebase-adminsdk-fbsvc-ee6581830a.json
+# 🔥 Firebase JSON을 환경 변수로 전달하여 파일을 저장하지 않음
+# 🔥 Jenkins Pipeline에서 ENV FIREBASE_JSON 값을 주입하도록 변경
+ARG FIREBASE_CRED
+ENV FIREBASE_JSON=""
 
 # 이미지 빌드 명령
 ENTRYPOINT ["java", "-Dspring.profiles.active=${USE_PROFILE}", "-jar", "app.jar"]
