[feat] infra-dockerfile 수정

--- a/reper/Dockerfile
+++ b/reper/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 RUN apt-get update && apt-get install -y mariadb-client && rm -rf /var/lib/apt/lists/*
 
 # Jaso Analyzer 플러그인 추가 (필요한 경우)
-COPY docker/jaso-analyzer /usr/share/elasticsearch/plugins/jaso-analyzer
+COPY /home/ubuntu/docker/jaso-analyzer /usr/share/elasticsearch/plugins/jaso-analyzer
 RUN ls -la /usr/share/elasticsearch/plugins/jaso-analyzer
 
 # gradle 빌드를 하면 build/libs 하위에 *.jar 생성됨. 해당 '*.jar'를 'app.jar'로 copy
