[feat] infra - docker-compose 수정
내가 생각하기에는 ./ 같이 경로를 지정해주면 오류가 나는 경우가 많아서 좀 도박임.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - elastic_data:/elasticsearch/data
       - elasticsearch_logs:/elasticsearch/logs:rw
+      - ./docker/jaso-analyzer:/usr/share/elasticsearch/plugins/jaso-analyzer  # 플러그인 폴더 연결
     networks:
       - elastic_network
     command: >
