--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,16 +29,14 @@ services:
     volumes:
       - elastic_data:/elasticsearch/data
       - elasticsearch_logs:/elasticsearch/logs:rw
-      - /home/ubuntu/docker/jaso-analyzer:/usr/share/elasticsearch/plugins/jaso-analyzer  # 플러그인 폴더 연결
+      - ./reper/docker/jaso-analyzer:/usr/share/elasticsearch/plugins/jaso-analyzer  # Pipeline에서 받은 폴더 마운트
+      # - /home/ubuntu/docker/jaso-analyzer:/usr/share/elasticsearch/plugins/jaso-analyzer  # 플러그인 폴더 연결
     networks:
       - elastic_network
     command: >
       bash -c "
       if [ ! -d /usr/share/elasticsearch/plugins/analysis-nori ]; then
         elasticsearch-plugin install analysis-nori --batch;
-      fi;
-      if [ ! -d /usr/share/elasticsearch/plugins/jaso-analyzer ]; then
-        elasticsearch-plugin install file:///usr/share/elasticsearch/plugins/jaso-analyzer;
       fi;
       exec elasticsearch"
 
