--- a/reper_front/app/src/main/AndroidManifest.xml
+++ b/reper_front/app/src/main/AndroidManifest.xml
@@ -77,7 +77,9 @@
             <intent-filter android:priority="999">
                 <action android:name="com.ssafy.reper.UPDATE_BOSS_FRAGMENT"/>
                 <action android:name="com.ssafy.reper.DELETE_ACCESS"/>
-                <action android:name="com.ssafy.reper.UPDATE_ORDER_FRAGMENT"/>
+                <action android:name="com.ssafy.reper.APPROVE_ACCESS"/>
+                <action android:name="com.ssafy.reper.UPDATE_ORDER"/>
+                <action android:name="com.ssafy.reper.UPDATE_NOTICE"/>
             </intent-filter>
         </receiver>
 
