--- a/reper/src/main/resources/recipes-index-settings.json
+++ b/reper/src/main/resources/recipes-index-settings.json
@@ -1,4 +1,9 @@
 {
+  "settings": {
+    "index": {
+      "number_of_replicas": 0
+    }
+  },
   "analysis": {
     "tokenizer": {
       "edge_ngram_tokenizer": {
